--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -1,12 +1,12 @@
 \documentclass{muratcan_cv}
 
-\setname{Murat Can}{Karacabey}
-\setaddress{Munich/Germany}
-\setmobile{xx xxx xx xx}
-\setmail{muratcankaracabey@gmail.com}
-\setposition{Work Student} %ignored for now
-\setlinkedinaccount{https://www.linkedin.com/in/murat-can-karacabey-568a96b1/} %you can play with color of the template (red is also nice..)
-\setgithubaccount{https://github.com/muratcankaracabey} %you can play with color of the template (red is also nice..)
+\setname{Ashish}{Patel}
+\setaddress{Pune/India}
+\setmobile{+91 7705047900}
+\setmail{ashishpatel0720@gmail.com}
+\setposition{BigData Engineer} %ignored for now
+\setlinkedinaccount{https://www.linkedin.com/in/ashishpatel0720/} %you can play with color of the template (red is also nice..)
+\setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
 \setthemecolor{red} %you can play with color of the template (red is also nice..)
 
 \begin{document}
