--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -7,7 +7,7 @@
 \setposition{BigData Engineer} %ignored for now
 \setlinkedinaccount{https://www.linkedin.com/in/ashishpatel0720/} %you can play with color of the template (red is also nice..)
 \setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
-\setthemecolor{red} %you can play with color of the template (red is also nice..)
+\setthemecolor{cyan} %you can play with color of the template (red is also nice..)
 
 \begin{document}
 %Set variables
@@ -19,8 +19,39 @@
 %
 % Summary
 \addblocktext{Summary}{%
-\lipsum[1][1-12]\ %replace this part with actual text
+Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Java, Scala, and Python seeking to apply my abilities to contribute and build something productive.
 }
+% Experience
+\section{Experience}
+    % 1.WALMART LABS
+    \datedexperience{Software Engineer III (Big Data) @WalmartLabs}{Feb, 2021 - Present/ Bangalore, India} 
+	%    \explanation{Software Engineer III (Big Data)}
+
+        \explanationdetail{\coloredbullet\
+		Part of the supply chain technology team, and working on cutting edge forecasting	solutions to enable the everyday low-cost philosophy of Walmart.}
+		        \explanationdetail{\coloredbullet\
+	 Building High-Quality Scalable ETL Frameworks to build our Forecasting Pipelines.
+	 }
+        \explanationdetail{\coloredbullet\
+	Migrating our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
+	        \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer}
+
+    % 2.Deutsche bank
+    \datedexperience{Senior Software Engineer @DeutscheBank}{Feb, 2021 - Present/ Bangalore, India} 
+	%    \explanation{Software Engineer III (Big Data)}
+
+        \explanationdetail{\coloredbullet\
+		Part of the supply chain technology team, and working on cutting edge forecasting	solutions to enable the everyday low-cost philosophy of Walmart.}
+		        \explanationdetail{\coloredbullet\
+	 Building High-Quality Scalable ETL Frameworks to build our Forecasting Pipelines.}
+        \explanationdetail{\coloredbullet\
+	Migrating our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
+	        \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer}
+		
+		
+
+ 
+%
 %
 %Education
 \section{Education} 
@@ -35,33 +66,7 @@
      \lipsum[1][3-4]\par %replace this part with actual text
      }
 %
-% Experience
-\section{Experience}
-    %
-    \datedexperience{Intertech Inc.}{2014-Summer / Turkey} 
-    \explanation{Intern as android developer} 
-    %
-    \datedexperience{Velocity Inc.}{2015-Summer / Turkey} 
-    \explanation{Intern as Developer/Tester} 
-    %
-    \datedexperience{Akbank}{2018-2019 / Turkey} 
-    \explanation{Ios Developer} 
-    \explanationdetail{\coloredbullet\ %
-     \lipsum[1][1-2]\par %replace this part with actual text
-     }
-    %
-    \datedexperience{Mobile-Software AG}{2019-2020 / Germany} 
-    \explanation{Ios Developer} 
-    \explanationdetail{\coloredbullet\ %
-     \lipsum[1][4-5]\par %replace this part with actual text
-     }
-    %
-    \datedexperience{BMW Autonomous Driving Campus}{2020-Now / Germany} 
-    \explanation{Working Student} 
-    \explanationdetail{\coloredbullet\ %
-     \lipsum[1][3-4]\par %replace this part with actual text
-     }
-%
+
 % Skills
 \section{Skills}
     %
