--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -5,7 +5,9 @@
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
-\setlinkedinaccount{https://www.linkedin.com/in/ashishpatel0720/} %you can play with color of the template (red is also nice..)
+\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
+\setportfolio{https://ashish.live/}
+%you can play with color of the template (red is also nice..)
 \setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
 \setthemecolor{cyan} %you can play with color of the template (red is also nice..)
 
@@ -19,84 +21,149 @@
 %
 % Summary
 \addblocktext{Summary}{%
-Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Java, Scala, and Python seeking to apply my abilities to contribute and build something productive.
+Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Java, Scala, and Python seeking to apply my abilities to contribute and build something productive.\\
+	I love contributing to Open-source projects and a contributor to Apache Airflow and other Open source projects.
 }
 % Experience
 \section{Experience}
     % 1.WALMART LABS
-    \datedexperience{Software Engineer III (Big Data) @WalmartLabs}{Feb, 2021 - Present/ Bangalore, India} 
-	%    \explanation{Software Engineer III (Big Data)}
-
+    \datedexperience{Walmart Global Tech}{Feb, 2021 - Present / Bangalore, India} 	
+		\explanation{Software Engineer III (Big Data) } 		
         \explanationdetail{\coloredbullet\
 		Part of the supply chain technology team, and working on cutting edge forecasting	solutions to enable the everyday low-cost philosophy of Walmart.}
 		        \explanationdetail{\coloredbullet\
 	 Building High-Quality Scalable ETL Frameworks to build our Forecasting Pipelines.
 	 }
-        \explanationdetail{\coloredbullet\
+      \explanationdetail{\coloredbullet\
 	Migrating our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
-	        \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer}
-
-    % 2.Deutsche bank
-    \datedexperience{Senior Software Engineer @DeutscheBank}{Feb, 2021 - Present/ Bangalore, India} 
-	%    \explanation{Software Engineer III (Big Data)}
-
+	  \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
+		}
+		% TODO: move this to extras
+%	% 2.Apache
+%		\datedexperience{Apache Software Foundation}{Feb, 2021 - Present / Bangalore, India}
+%		\explanation{Contributor - Apache Airflow} 
+%        \explanationdetail{\coloredbullet\
+%		Contributing to Apache Airflow}
+%        \explanationdetail{\coloredbullet\
+%		Apache Airflow is a workflow automation and scheduling system that can be used to author and manage data pipelines.}
+%        \explanationdetail{\coloredbullet\
+%		contributions - https://github.com/pateash}
+	% Deutsche bank
+	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India} 
+	\explanation{Senior Software Engineer}
         \explanationdetail{\coloredbullet\
-		Part of the supply chain technology team, and working on cutting edge forecasting	solutions to enable the everyday low-cost philosophy of Walmart.}
-		        \explanationdetail{\coloredbullet\
-	 Building High-Quality Scalable ETL Frameworks to build our Forecasting Pipelines.}
+		Worked As a Data engineer in CIB division for Volcker Project.}
         \explanationdetail{\coloredbullet\
-	Migrating our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
-	        \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer}
-		
-		
+		We Developed Data pipelines for our Reporting Batch jobs, handling Terabytes of dataevery day across hundreds of Spark and Hadoop MapReduce ETL jobs.}
+        \explanationdetail{\coloredbullet\
+	Optimized the End to End Pipeline execution time to comply with Regulatory SLA inaccordance with new Volcker2.0 regulatory Norms.}
+        \explanationdetail{\coloredbullet\
+	Developed Platform simplification for Informatica jobs using Java8 and Spring +Reactor Framework with Oracle Database.}
+        \explanationdetail{\coloredbullet\
+	Worked on Google Cloud Platform to plan and migrate our On-Premise Cluster and Jobsto GCP.}
+        \explanationdetail{\coloredbullet\
+	Tech Stack - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}
 
+	% NIT, Bhopal
+	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India} 
+	\explanation{Research Assistant}
+        \explanationdetail{\coloredbullet\
+		Co-written  "A Comparative Study of Music Recommendation Systems" withProf. Rajesh Wadhvani.}
+    \explanationdetail{\coloredbullet\
+		This paper describes different recommendation strategies and compares theirpracticality on mobile devices.}
+    \explanationdetail{\coloredbullet\
+		Evaluated different Recommendation Strategies by training different ML models andevaluating them.}
+    \explanationdetail{\coloredbullet\
+		ref - https://ieeexplore.ieee.org/document/8546852}
+	% CARWALE
+	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India} 
+	\explanation{Summer Intern}
+        \explanationdetail{\coloredbullet\
+		Worked as Data Engineering Intern in the R\&D division of CarWale.}
+		 \explanationdetail{\coloredbullet\
+		We developed CWBigQuery, which is a service that enables interactive analysis ofmassively large datasets stored in Cassandra Storage.}
+ 		 \explanationdetail{\coloredbullet\
+	It allows users to submit and schedule Spark Job, just using SQL like syntax using SparkSQL.}
+ 	 \explanationdetail{\coloredbullet\
+	This Project took inspiration from Google BigQuery but uses a completely differentarchitecture, we have also created a web application which will provide an interface for users to log inand submit, schedule, and view results.}
+ 	 \explanationdetail{\coloredbullet\
+	TechStack: Scala, Apache Spark, Cassandra, Python-Flask Framework}
+ 
  
 %
 %
 %Education
 \section{Education} 
-    \datedexperience{Boğaziçi University}{2013-2018} 
-    \explanation{B.S in Computer Engineering} 
+    \datedexperience{NIT, Bhopal}{ 2014 - 2018} 
+    \explanation{Bachelor of Technology, Computer Science \& Engineering} 
      \explanationdetail{\coloredbullet\ % 
-     \lipsum[1][3-4]\par %replace this part with actual text
+     Graduated in Computer Science and Engineering.	GGPA - 8.4/10 
      }
-    \datedexperience{Technical University of Munich}{2019-2022} 
-    \explanation{M.S in Informatics} 
-    \explanationdetail{\coloredbullet\ %
-     \lipsum[1][3-4]\par %replace this part with actual text
-     }
+    \datedexperience{I.P.S Academy}{2011 - 2013} 
+    \explanation{Higher Secondary, Science \& Mathematics} 
+    \explanationdetail{\coloredbullet\
+     Completed Higher Secondary with Physics, Chemistry, and Maths.	Percentage - 90.2\%     }
 %
 
 % Skills
 \section{Skills}
     %
-    \newcommand{\skillone}{\createskill{Programming Languages}{\textbf{\emph{Experienced:}} \ \  Python \cpshalf Swift \ \ \textbf{\emph{Familiar:}} \ \  Javascript \cpshalf Objective-C \cpshalf Bash \cpshalf Java \cpshalf Scheme}}
+    \newcommand{\skillone}{\createskill{Programming}{Java\cpshalf Scala\cpshalf Python\cpshalf C++\cpshalf Bash}}
     %
-    \newcommand{\skilltwo}{\createskill{Software Development}{Programming Paradigms \cpshalf GIT \cpshalf CLI \cpshalf Agile Methodology \cpshalf DevOps Lifecycles}}
+    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Hadoop MapReduce\cpshalf Apache Airflow\cpshalf Hive\cpshalf Impala\cpshalf Cloudera\cpshalf Google Cloud\cpshalf Tensorflow}}
     %
-    \newcommand{\skillthree}{\createskill{Frameworks \ \& \ Libraries}{Jupyter \cpshalf Matplotplib \cpshalf Numpy \cpshalf Pandas \cpshalf Scikit-learn \cpshalf Gym \cpshalf PyTorch \cpshalf Tensorflow}}
+    \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf Oracle\cpshalf MySql\cpshalf GIT\cpshalf Agile\cpshalf DevOps}}
     %
-    \newcommand{\skillfour}{\createskill{iOS Programming}{RxSwift \cpshalf PromiseKit \cpshalf CocoaPods \cpshalf Autolayout/DSLs}}
+    \newcommand{\skillfour}{\createskill{Languages}{\textbf{\emph{Native:}} \ \  Hindi \cpshalf\ \ \textbf{\emph{Fluent:}} \ \ English }}
     %
-    \newcommand{\skillfive}{\createskill{Languages}{\textbf{\emph{Native:}} \ \  Turkish \ \ \textbf{\emph{Fluent:}} \ \ English \ \ \textbf{\emph{Beginner:}} \ \  German }}
-    %
-    \createskills{\skillone, \skilltwo, \skillthree, \skillfour, \skillfive}
+    \createskills{\skillone, \skilltwo, \skillthree, \skillfour}
 %
-% Experience
+
+% AWARDS and RECOGNITION
+\section{Awards and Recognition}
+    \newcommand{\awardone}{ 
+    Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.}
+    %
+    \newcommand{\awardtwo}{    
+		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon
+		}       
+    %
+        \newcommand{\awardthree}{ 
+    Winner of Deutsche bank's excellence award.}
+    %
+
+    \newcommand{\awardfour}{    
+    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}       		
+    %
+
+	%
+    \newcommand{\listofawards}{\awardone, \awardtwo, \awardthree,  \awardfour}
+    %
+    \createbullets{\listofawards}
+%
+
+% EXTRA
 \section{Extra}
-    \newcommand{\extraone}{%
-    \lipsum[1][7-8]\par %replace this part with actual text
-    }
+%    \newcommand{\extraone}{ Languages - English, Hindi    }
     %
-    \newcommand{\extratwo}{%
-    \lipsum[1][9-10]\par %replace this part with actual text
-    }
+    \newcommand{\extratwo}{    
+		Contributing to Apache Airflow, contributions - https://github.com/pateash
+		}       
     %
-    \newcommand{\extrathree}{%
-    \lipsum[1][11-12]%replace this part with actual text
-    }
+    \newcommand{\extrathree}{    
+    	Working on Open source, CMD tool for developers, https://github.com/codingtools/cdt
+		}       		
     %
-    \newcommand{\listofextras}{\extraone, \extratwo, \extrathree}
+    \newcommand{\extrafour}{    
+		Writing Articles on Codebrace on Medium https://medium.com/codebrace, with over 70K+ reads so far.
+		}
+    \newcommand{\extrafive}{    
+		Created Opensource Regexplore, Intuitive Regex Checker https://regexplore.github.io
+		}
+
+
+	%
+    \newcommand{\listofextras}{\extratwo, \extrathree,  \extrafour,  \extrafive}
     %
     \createbullets{\listofextras}
 %
