--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -1,12 +1,12 @@
 \documentclass{muratcan_cv}
-
 \setname{Ashish}{Patel}
 \setaddress{Pune/India}
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
-\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
+\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/}
 \setportfolio{https://ashish.live/}
+
 %you can play with color of the template (red is also nice..)
 \setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
 \setthemecolor{cyan} %you can play with color of the template (red is also nice..)
@@ -27,82 +27,89 @@ Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Ja
 % Experience
 \section{Experience}
     % 1.WALMART LABS
-    \datedexperience{Walmart Global Tech}{Feb, 2021 - Present / Bangalore, India} 	
-		\explanation{Software Engineer III (Big Data) } 		
+    \datedexperience{Walmart Global Tech}{Feb, 2021 - Present / Bangalore, India}
+		\explanation{Software Engineer III (Big Data) }
+
         \explanationdetail{\coloredbullet\
-		Part of the supply chain technology team, and working on cutting edge forecasting	solutions to enable the everyday low-cost philosophy of Walmart.}
-		        \explanationdetail{\coloredbullet\
-	 Building High-Quality Scalable ETL Frameworks to build our Forecasting Pipelines.
+		Part of the \textbf{supply chain technology} team, and working on cutting edge forecasting solutions to enable the everyday low-cost philosophy of Walmart.}
+		\explanationdetail{\coloredbullet\
+	 Building \textbf{High-Quality Scalable ETL Frameworks} to build our Forecasting Pipelines.
 	 }
       \explanationdetail{\coloredbullet\
-	Migrating our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
-	  \explanationdetail{\coloredbullet\		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
+	Migrated our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
+	  \explanationdetail{\coloredbullet\
+		Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
 		}
-		% TODO: move this to extras
-%	% 2.Apache
-%		\datedexperience{Apache Software Foundation}{Feb, 2021 - Present / Bangalore, India}
-%		\explanation{Contributor - Apache Airflow} 
-%        \explanationdetail{\coloredbullet\
-%		Contributing to Apache Airflow}
-%        \explanationdetail{\coloredbullet\
-%		Apache Airflow is a workflow automation and scheduling system that can be used to author and manage data pipelines.}
-%        \explanationdetail{\coloredbullet\
-%		contributions - https://github.com/pateash}
 	% Deutsche bank
-	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India} 
+	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India}
 	\explanation{Senior Software Engineer}
         \explanationdetail{\coloredbullet\
-		Worked As a Data engineer in CIB division for Volcker Project.}
+		Worked As a Big Data engineer in CIB division for Volcker Project.}
         \explanationdetail{\coloredbullet\
-		We Developed Data pipelines for our Reporting Batch jobs, handling Terabytes of dataevery day across hundreds of Spark and Hadoop MapReduce ETL jobs.}
+		Developed \textbf{Data pipelines for our Reporting ETL} jobs, handling \textbf{Terabytes} of data
+every day across hundreds of Spark and Hadoop MapReduce jobs.}
         \explanationdetail{\coloredbullet\
-	Optimized the End to End Pipeline execution time to comply with Regulatory SLA inaccordance with new Volcker2.0 regulatory Norms.}
+	Optimized End to End Pipeline execution time to comply with Regulatory SLA in
+accordance with new Volcker2.0 regulatory Norms.}
         \explanationdetail{\coloredbullet\
-	Developed Platform simplification for Informatica jobs using Java8 and Spring +Reactor Framework with Oracle Database.}
+	Developed Platform simplification for Informatica jobs using Java8 and Spring +
+Reactor Framework with Oracle Database.}
         \explanationdetail{\coloredbullet\
-	Worked on Google Cloud Platform to plan and migrate our On-Premise Cluster and Jobsto GCP.}
-        \explanationdetail{\coloredbullet\
-	Tech Stack - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}
-
+	Tech Stack - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,
+Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}\\
 	% NIT, Bhopal
-	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India} 
+	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India}
 	\explanation{Research Assistant}
         \explanationdetail{\coloredbullet\
-		Co-written  "A Comparative Study of Music Recommendation Systems" withProf. Rajesh Wadhvani.}
+		Co-written  \textbf{\itshape{"A Comparative Study of Music Recommendation Systems"}} with
+Prof. Rajesh Wadhvani.}
     \explanationdetail{\coloredbullet\
-		This paper describes different recommendation strategies and compares theirpracticality on mobile devices.}
+		This paper describes different recommendation strategies and compares their
+practicality on mobile devices.}
     \explanationdetail{\coloredbullet\
-		Evaluated different Recommendation Strategies by training different ML models andevaluating them.}
+		Evaluated different Recommendation Strategies by training different ML models and
+evaluating them.}
     \explanationdetail{\coloredbullet\
-		ref - https://ieeexplore.ieee.org/document/8546852}
+		ref - https://ieeexplore.ieee.org/document/8546852
+		}
 	% CARWALE
-	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India} 
+	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India}
 	\explanation{Summer Intern}
         \explanationdetail{\coloredbullet\
 		Worked as Data Engineering Intern in the R\&D division of CarWale.}
 		 \explanationdetail{\coloredbullet\
-		We developed CWBigQuery, which is a service that enables interactive analysis ofmassively large datasets stored in Cassandra Storage.}
+		We developed CWBigQuery, which is a service that enables interactive analysis of
+massively large datasets stored in Cassandra Storage.}
  		 \explanationdetail{\coloredbullet\
-	It allows users to submit and schedule Spark Job, just using SQL like syntax using SparkSQL.}
+	It allows users to submit and schedule Spark Job, just using SQL like syntax using Spark
+SQL.}
  	 \explanationdetail{\coloredbullet\
-	This Project took inspiration from Google BigQuery but uses a completely differentarchitecture, we have also created a web application which will provide an interface for users to log inand submit, schedule, and view results.}
+	This Project took inspiration from Google BigQuery but uses a completely different
+architecture, we have also created a web application which will provide an interface for users to log in
+and submit, schedule, and view results.}
  	 \explanationdetail{\coloredbullet\
-	TechStack: Scala, Apache Spark, Cassandra, Python-Flask Framework}
- 
- 
+	Tech Stack - Scala, Apache Spark, Cassandra, Python-Flask Framework}
+
+
 %
 %
 %Education
-\section{Education} 
-    \datedexperience{NIT, Bhopal}{ 2014 - 2018} 
-    \explanation{Bachelor of Technology, Computer Science \& Engineering} 
-     \explanationdetail{\coloredbullet\ % 
-     Graduated in Computer Science and Engineering.	GGPA - 8.4/10 
+\section{Education}
+    \datedexperience{NIT, Bhopal}{ 2014 - 2018}
+    \explanation{Bachelor of Technology, Computer Science \& Engineering}
+     \explanationdetail{\coloredbullet\ %
+     Graduated in Computer Science and Engineering.
+	\textbf{GGPA} - 8.4/10
+	}
+	 \explanationdetail{\coloredbullet\ %
+	  Worked as Web developer in the Student Council and developed websites and tech infrastructure for College events.
      }
-    \datedexperience{I.P.S Academy}{2011 - 2013} 
-    \explanation{Higher Secondary, Science \& Mathematics} 
+
+    \datedexperience{I.P.S Academy}{2011 - 2013}
+    \explanation{Higher Secondary, Science \& Mathematics}
     \explanationdetail{\coloredbullet\
-     Completed Higher Secondary with Physics, Chemistry, and Maths.	Percentage - 90.2\%     }
+     Completed Higher Secondary with Physics, Chemistry, and Maths.
+	Percentage - 90.2\%     }
 %
 
 % Skills
@@ -110,9 +117,9 @@ Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Ja
     %
     \newcommand{\skillone}{\createskill{Programming}{Java\cpshalf Scala\cpshalf Python\cpshalf C++\cpshalf Bash}}
     %
-    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Hadoop MapReduce\cpshalf Apache Airflow\cpshalf Hive\cpshalf Impala\cpshalf Cloudera\cpshalf Google Cloud\cpshalf Tensorflow}}
+    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Hadoop MapReduce\cpshalf Apache Airflow\cpshalf Hive\cpshalf Impala\cpshalf Cloudera\cpshalf Google Cloud}}
     %
-    \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf Oracle\cpshalf MySql\cpshalf GIT\cpshalf Agile\cpshalf DevOps}}
+    \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf Oracle\cpshalf MySql\cpshalf  Agile\cpshalf DevOps}}
     %
     \newcommand{\skillfour}{\createskill{Languages}{\textbf{\emph{Native:}} \ \  Hindi \cpshalf\ \ \textbf{\emph{Fluent:}} \ \ English }}
     %
@@ -121,19 +128,20 @@ Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Ja
 
 % AWARDS and RECOGNITION
 \section{Awards and Recognition}
-    \newcommand{\awardone}{ 
+    \newcommand{\awardone}{
     Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.}
     %
-    \newcommand{\awardtwo}{    
-		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon
-		}       
+    \newcommand{\awardtwo}{
+		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon\\
+		}
     %
-        \newcommand{\awardthree}{ 
-    Winner of Deutsche bank's excellence award.}
+        \newcommand{\awardthree}{
+    Winner of Deutsche bank's excellence award.\\
+    }
     %
 
-    \newcommand{\awardfour}{    
-    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}       		
+    \newcommand{\awardfour}{
+    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}
     %
 
 	%
@@ -146,19 +154,19 @@ Experienced Big Data Engineer with 3.5+ years of total experience in BigData, Ja
 \section{Extra}
 %    \newcommand{\extraone}{ Languages - English, Hindi    }
     %
-    \newcommand{\extratwo}{    
-		Contributing to Apache Airflow, contributions - https://github.com/pateash
-		}       
-    %
-    \newcommand{\extrathree}{    
-    	Working on Open source, CMD tool for developers, https://github.com/codingtools/cdt
-		}       		
-    %
-    \newcommand{\extrafour}{    
-		Writing Articles on Codebrace on Medium https://medium.com/codebrace, with over 70K+ reads so far.
+    \newcommand{\extratwo}{
+		Contributing to Apache Airflow, contributions - \textbf{https://github.com/pateash}
 		}
-    \newcommand{\extrafive}{    
-		Created Opensource Regexplore, Intuitive Regex Checker https://regexplore.github.io
+    %
+    \newcommand{\extrathree}{
+    	Working on Open source, CMD tool for developers, \textbf{https://github.com/codingtools/cdt}
+		}
+    %
+    \newcommand{\extrafour}{
+		Writing Articles on Codebrace on Medium \textbf{https://medium.com/codebrace}, with over 70K+ reads so far.
+		}
+    \newcommand{\extrafive}{
+		Created Opensource Regexplore, Intuitive Regex Checker \textbf{https://regexplore.github.io}
 		}
 
 
