--- a/cv/latex_cv-master/cover_letter.tex
+++ b/cv/latex_cv-master/cover_letter.tex
@@ -5,7 +5,9 @@
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{Big Data Engineer} %ignored for now
-\setlinkedinaccount{https://www.linkedin.com/in/ashishpatel0702/} %you can play with color of the template (red is also nice..)
+\setlinkedinaccount{https://www.linkedin.com/in/ashishpatel0720/}
+\setportfolio{https://ashish.live/}
+%you can play with color of the template (red is also nice..)
 \setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
 \setthemecolor{cyan} %you can play with color of the template (red is also nice..)
 
@@ -13,19 +15,34 @@
 %Set variables
 %You can add sections, texts, explanations just by copying the style below. Replace the dummy texts "\lipsum[1][x-x]\par" with actual texts.
 %Create header
-\headerview
-\vspace{1ex}
+    \headerview
+    \vspace{1ex}
 %Sections
 %
-\setcompanyname{GOOGLE INC.}
-\setcontactperson{Mr.Brown}
-\setclaimedposition{Big Data Engineer} 
-\coverletter{ %
-\indent %replace this part with actual text
-As a long-time follower of your company, I was excited to see the openingfor Software Engineer on your job portal. The opportunity to work with yourcompany and fulfil this role is a fantastic opportunity, and I feel that myeducation and recent job experience make me the ideal candidate for theposition.\\
-My professional experience has given me the opportunity to work with adiverse team and meet company goals in a timely manner. I know yourcompany is looking to reach new customers and continue to grow, and Ihave a track record of promoting this in the workplace. As you’ll notice inmy attached resume, I have more than 3.5+ years of experience in Softwareand Big Data Engineering, I am obsessed with Data and the value itprovides to any customers and business.\\
-In closing, I am excited about the opportunity and feel can fully supportthe team as well as the business and encourage the overall growth ofthe company. I look forward to hearing more about the position andappreciate your consideration.
-}
+    \setcompanyname{XYZ INC.}
+    \setcontactperson{Mr.XYZ}
+    \setclaimedposition{Big Data Engineer}
+    \coverletter{ %
+        \indent %replace this part with actual text
+        As a long-time follower of your company, I was excited to see the opening
+        for Software Engineer on your job portal. The opportunity to work with your
+        company and fulfil this role is a fantastic opportunity, and I feel that my
+        education and recent job experience make me the ideal candidate for the
+        position.\\
+
+        My professional experience has given me the opportunity to work with a
+        diverse team and meet company goals in a timely manner. I know your
+        company is looking to reach new customers and continue to grow, and I
+        have a track record of promoting this in the workplace. As you’ll notice in
+        my attached resume, I have more than 3.5+ years of experience in Software
+        and Big Data Engineering, I am obsessed with Data and the value it
+        provides to any customers and business.\\
+
+        In closing, I am excited about the opportunity and feel can fully support
+        the team as well as the business and encourage the overall growth of
+        the company. I look forward to hearing more about the position and
+        appreciate your consideration.
+    }
 %Footnote
-\createfootnote
+    \createfootnote
 \end{document}
