--- a/cv/latex_cv-master/cover_letter.tex
+++ b/cv/latex_cv-master/cover_letter.tex
@@ -19,13 +19,13 @@
     \vspace{1ex}
 %Sections
 %
-    \setcompanyname{XYZ INC.}
-    \setcontactperson{Mr.XYZ}
-    \setclaimedposition{Big Data Engineer}
+    \setcompanyname{\textbf{Shopee Inc.}}
+    \setcontactperson{}
+    \setclaimedposition{\textbf{Data Engineer}}
     \coverletter{ %
         \indent %replace this part with actual text
         As a long-time follower of your company, I was excited to see the opening
-        for Software Engineer on your job portal. The opportunity to work with your
+        for \textbf{Data Engineer} on your job portal. The opportunity to work with your
         company and fulfil this role is a fantastic opportunity, and I feel that my
         education and recent job experience make me the ideal candidate for the
         position.\\
@@ -34,9 +34,9 @@
         diverse team and meet company goals in a timely manner. I know your
         company is looking to reach new customers and continue to grow, and I
         have a track record of promoting this in the workplace. As you’ll notice in
-        my attached resume, I have more than 3.5+ years of experience in Software
-        and Big Data Engineering, I am obsessed with Data and the value it
-        provides to any customers and business.\\
+        my attached resume, I have more than \textbf{3.5+ years} of experience in \textbf{
+            Big Data Engineering}, I am obsessed with Data and the value it
+        provides to customers and business.\\
 
         In closing, I am excited about the opportunity and feel can fully support
         the team as well as the business and encourage the overall growth of
