--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -4,7 +4,7 @@
 \setmobile{+44 7742118474}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
-\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/}
+\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
 \setportfolio{https://ashish.live/}
 
 %you can play with color of the template (red is also nice..)
@@ -15,121 +15,122 @@
 %Set variables
 %You can add sections, texts, explanations just by copying the style below. Replace the dummy texts "\lipsum[1][x-x]\par" with actual texts.
 %Create header
-    \headerview
-    \vspace{1ex}
+\headerview
+\vspace{1ex}
 %Sections
 %
 % Summary
-    \addblocktext{Summary}{%
-        Experienced Big Data Engineer with 4 years of total experience in BigData, Java, Scala, and Python seeking to apply my abilities to contribute and build something productive.\\
-        I am active contributor to Open-source projects like \textbf{Apache Airflow}.
-    }
+\addblocktext{Summary}{ Experienced Software Engineer with \textbf{4.5+ years} of total experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
+I am also active contributor to Open-source projects like \textbf{Apache Airflow}.
+}
 % Experience
-    \section{Experience}
+\section{Experience}
     % Skyscanner
-    \datedexperience{Skyscanner}{Dev, 2021 - Present / London, UK}
-    \explanation{Senior Software Engineer ( Big Data ) }
-
-    \explanationdetail{\coloredbullet\
-        Part of the \textbf{Data Platform} team, and working on cutting edge big data solutions to enable our Data Analysts and Data Scientists to make sense of revenue data.}
-    \explanationdetail{\coloredbullet\
-        Building \textbf{High-Quality Scalable ETL Frameworks} using cutting edge solutions like Databricks, Spark, Airflow and AWS.
-    }
-    \explanationdetail{\coloredbullet\
-        Tech Stack - PySpark, Apache Airflow, Databricks, DeltaLake, AWS
-    }
+    \datedexperience{Skyscanner}{Dev, 2021 - Present / London, UK} 	
+		\explanation{Senior Software Engineer ( Distributed Systems ) }\\
+        \explanationdetail{\coloredbullet\
+		Part of the \textbf{Data Platform} team, and working on cutting edge big data solutions to enable our Data Analysts and Data Scientists to make sense of revenue data.}
+		\explanationdetail{\coloredbullet\
+	 Building High Scalable Streaming Pipelines using cutting edge solutions like \textbf{Kafka}, \textbf{Kinesis} and \textbf{ Samaza}.
+	 }
+	\explanationdetail{\coloredbullet\
+	 Building High-Quality Scalable ETL Frameworks using cutting edge solutions like \textbf{Databricks}, \textbf{Spark}, \textbf{Airflow} and \textbf{AWS}.
+	 }
+  \explanationdetail{\coloredbullet\
+		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Apache Kafka, AWS Kinesis, Samza, Databricks, DeltaLake.
+		}
     % WALMART LABS
-    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India}
-    \explanation{Software Engineer III (Big Data) }
-
+    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India} 	
+		\explanation{Software Engineer III (Big Data) }
+		
+        \explanationdetail{\coloredbullet\
+		Part of the \textbf{supply chain technology} team, and working on cutting edge forecasting solutions to enable the everyday low-cost philosophy of Walmart.}
+		\explanationdetail{\coloredbullet\
+	 Building \textbf{High-Quality Scalable ETL Frameworks} to build our Forecasting Pipelines.
+	 }
+      \explanationdetail{\coloredbullet\
+	Migrated our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
+	  \explanationdetail{\coloredbullet\
+		\textbf{Tech Stack} - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
+		}
+	% Deutsche bank
+	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India} 
+	\explanation{Senior Software Engineer}
+        \explanationdetail{\coloredbullet\
+		Worked As a Big Data engineer in CIB division for Volcker Project.}
+        \explanationdetail{\coloredbullet\
+		Developed \textbf{Data pipelines for our Reporting ETL} jobs, handling \textbf{Terabytes} of data
+every day across hundreds of Spark and Hadoop MapReduce jobs.}
+        \explanationdetail{\coloredbullet\
+	Optimized End to End Pipeline execution time to comply with Regulatory SLA in
+accordance with new Volcker2.0 regulatory Norms.}
+        \explanationdetail{\coloredbullet\
+	Developed Platform simplification for Informatica jobs using Java8 and Spring +
+Reactor Framework with Oracle Database.}
+        \explanationdetail{\coloredbullet\
+	\textbf{Tech Stack} - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,
+Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}\\
+	% NIT, Bhopal
+	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India} 
+	\explanation{Research Assistant}
+        \explanationdetail{\coloredbullet\
+		Co-written  \textbf{\itshape{"A Comparative Study of Music Recommendation Systems"}} with
+Prof. Rajesh Wadhvani.}
     \explanationdetail{\coloredbullet\
-        Part of the \textbf{supply chain technology} team, and working on cutting edge forecasting solutions to enable the everyday low-cost philosophy of Walmart.}
+		This paper describes different recommendation strategies and compares their
+practicality on mobile devices.}
     \explanationdetail{\coloredbullet\
-        Building \textbf{High-Quality Scalable ETL Frameworks} to build our Forecasting Pipelines.
-    }
+		Evaluated different Recommendation Strategies by training different ML models and
+evaluating them.}
     \explanationdetail{\coloredbullet\
-        Migrated our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
-    \explanationdetail{\coloredbullet\
-        Tech Stack - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
-    }
-    % Deutsche bank
-    \datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India}
-    \explanation{Senior Software Engineer}
-    \explanationdetail{\coloredbullet\
-        Worked As a Big Data engineer in CIB division for Volcker Project.}
-    \explanationdetail{\coloredbullet\
-        Developed \textbf{Data pipelines for our Reporting ETL} jobs, handling \textbf{Terabytes} of data
-        every day across hundreds of Spark and Hadoop MapReduce jobs.}
-    \explanationdetail{\coloredbullet\
-        Optimized End to End Pipeline execution time to comply with Regulatory SLA in
-        accordance with new Volcker2.0 regulatory Norms.}
-    \explanationdetail{\coloredbullet\
-        Developed Platform simplification for Informatica jobs using Java8 and Spring +
-        Reactor Framework with Oracle Database.}
-    \explanationdetail{\coloredbullet\
-        Tech Stack - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,
-        Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}\\
-    % NIT, Bhopal
-    \datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India}
-    \explanation{Research Assistant}
-    \explanationdetail{\coloredbullet\
-        Co-written  \textbf{\itshape{"A Comparative Study of Music Recommendation Systems"}} with
-        Prof. Rajesh Wadhvani.}
-    \explanationdetail{\coloredbullet\
-        This paper describes different recommendation strategies and compares their
-        practicality on mobile devices.}
-    \explanationdetail{\coloredbullet\
-        Evaluated different Recommendation Strategies by training different ML models and
-        evaluating them.}
-    \explanationdetail{\coloredbullet\
-        ref - https://ieeexplore.ieee.org/document/8546852
-    }
-    % CARWALE
-    \datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India}
-    \explanation{Summer Intern}
-    \explanationdetail{\coloredbullet\
-        Worked as Data Engineering Intern in the R\&D division of CarWale.}
-    \explanationdetail{\coloredbullet\
-        We developed CWBigQuery, which is a service that enables interactive analysis of
-        massively large datasets stored in Cassandra Storage.}
-    \explanationdetail{\coloredbullet\
-        It allows users to submit and schedule Spark Job, just using SQL like syntax using Spark
-        SQL.}
-    \explanationdetail{\coloredbullet\
-        This Project took inspiration from Google BigQuery but uses a completely different
-        architecture, we have also created a web application which will provide an interface for users to log in
-        and submit, schedule, and view results.}
-    \explanationdetail{\coloredbullet\
-        Tech Stack - Scala, Apache Spark, Cassandra, Python-Flask Framework}
-
-
+		\textbf{Reference} - https://ieeexplore.ieee.org/document/8546852
+		}
+	% CARWALE
+	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India} 
+	\explanation{Summer Intern}
+        \explanationdetail{\coloredbullet\
+		Worked as Data Engineering Intern in the R\&D division of CarWale.}
+		 \explanationdetail{\coloredbullet\
+		We developed CWBigQuery, which is a service that enables interactive analysis of
+massively large datasets stored in Cassandra Storage.}
+ 		 \explanationdetail{\coloredbullet\
+	It allows users to submit and schedule Spark Job, just using SQL like syntax using Spark
+SQL.}
+ 	 \explanationdetail{\coloredbullet\
+	This Project took inspiration from Google BigQuery but uses a completely different
+architecture, we have also created a web application which will provide an interface for users to log in
+and submit, schedule, and view results.}
+ 	 \explanationdetail{\coloredbullet\
+	\textbf{Tech Stack} - Scala, Apache Spark, Cassandra, Python-Flask Framework}
+ 
+ 
 %
 %
 %Education
-    \section{Education}
-    \datedexperience{NIT, Bhopal}{ 2014 - 2018}
-    \explanation{Bachelor of Technology, Computer Science \& Engineering}
-    \explanationdetail{\coloredbullet\ %
-    Graduated in Computer Science and Engineering.
-    \textbf{GGPA} - 8.4/10
-    }
-    \explanationdetail{\coloredbullet\ %
-    Worked as Web developer in the Student Council and developed websites and tech infrastructure for College events.
-    }
-
-    \datedexperience{I.P.S Academy}{2011 - 2013}
-    \explanation{Higher Secondary, Science \& Mathematics}
+\section{Education} 
+    \datedexperience{NIT, Bhopal}{ 2014 - 2018} 
+    \explanation{Bachelor of Technology, Computer Science \& Engineering} 
+     \explanationdetail{\coloredbullet\ % 
+     Graduated in Computer Science and Engineering.
+	\textbf{GGPA} - 8.4/10 
+	}
+	 \explanationdetail{\coloredbullet\ % 
+	  Worked as Web developer in the Student Council and developed websites and tech infrastructure for College events.
+     }
+     
+    \datedexperience{I.P.S Academy}{2011 - 2013} 
+    \explanation{Higher Secondary, Science \& Mathematics} 
     \explanationdetail{\coloredbullet\
-        Completed Higher Secondary with Physics, Chemistry, and Maths.
-        Percentage - 90.2\%     }
+     Completed Higher Secondary with Physics, Chemistry, and Maths.
+	Percentage - 90.2\%     }
 %
 
 % Skills
-    \section{Skills}
+\section{Skills}
     %
     \newcommand{\skillone}{\createskill{Programming}{Java\cpshalf Scala\cpshalf Python\cpshalf C++\cpshalf Bash}}
     %
-    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf MapReduce\cpshalf Databricks Deltalake \cpshalf Apache Airflow\cpshalf Hive\cpshalf AWS\cpshalf GCP}}
+    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Kafka\cpshalf Databricks \cpshalf Airflow\cpshalf Hive\cpshalf AWS\cpshalf GCP}}
     %
     \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf Oracle\cpshalf MySql\cpshalf  Agile\cpshalf DevOps}}
     %
@@ -139,54 +140,55 @@
 %
 
 % AWARDS and RECOGNITION
-    \section{Awards and Recognition}
-    \newcommand{\awardone}{
-        Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.}
-    %
-    \newcommand{\awardtwo}{
-        Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon\\
+\section{Awards and Recognition}
+    \newcommand{\awardone}{ 
+    Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.\\
     }
     %
-    \newcommand{\awardthree}{
-        Winner of Deutsche bank's excellence award.\\
+    \newcommand{\awardtwo}{    
+		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon\\
+		}       
+    %
+        \newcommand{\awardthree}{ 
+    Winner of Deutsche bank's excellence award.\\
     }
     %
 
-    \newcommand{\awardfour}{
-        Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}
+    \newcommand{\awardfour}{    
+    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}       		
     %
 
-    %
+	%
     \newcommand{\listofawards}{\awardone, \awardtwo, \awardthree,  \awardfour}
     %
     \createbullets{\listofawards}
 %
 
 % EXTRA
-    \section{Extra}
+\section{Extra}
 %    \newcommand{\extraone}{ Languages - English, Hindi    }
     %
-    \newcommand{\extratwo}{
-        Contributing to Apache Airflow, contributions - \textbf{https://github.com/pateash}
-    }
+    \newcommand{\extratwo}{    
+		Contributing to Apache Airflow, contributions - \textbf{https://github.com/pateash}
+		}       
     %
-    \newcommand{\extrathree}{
-        Working on Open source, CMD tool for developers, \textbf{https://github.com/codingtools/cdt}
-    }
+    \newcommand{\extrathree}{    
+    	Working on Open source, CMD tool for developers, \textbf{https://github.com/codingtools/cdt}
+		}       		
     %
-    \newcommand{\extrafour}{
-        Writing Articles on Codebrace on Medium \textbf{https://medium.com/codebrace}, with over \textbf{100K+} reads so far.
-    }
-    \newcommand{\extrafive}{
-        Created Opensource Regexplore, Intuitive Regex Checker \textbf{https://regexplore.github.io}
-    }
+    \newcommand{\extrafour}{    
+		Writing Articles on Codebrace on Medium \textbf{https://medium.com/codebrace}, with over \textbf{100K+} reads so far.
+		}
+    \newcommand{\extrafive}{    
+		Created Opensource Regexplore, Intuitive Regex Checker \textbf{https://regexplore.github.io}
+		}
 
 
-    %
+	%
     \newcommand{\listofextras}{\extratwo, \extrathree,  \extrafour,  \extrafive}
     %
     \createbullets{\listofextras}
 %
 %Footnote
-    \createfootnote
+\createfootnote
 \end{document}
